--- a/public/chat.html
+++ b/public/chat.html
@@ -54,6 +54,14 @@
             </div>
         </li>   
     </script>
+
+    <script id="person-list-template" type="text/template">
+        <ol> 
+           {{#users}}
+            <li> {{.}}</li>
+           {{/users}}     
+        </ol>
+    </script>
     
   
 
